--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  
-"homepage": "https://ShubhamHundare.github.io/datavolx",
+"homepage": "https://shubhamhundare.github.io/datavolx/",
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
